--- a/thesis.tex
+++ b/thesis.tex
@@ -41,14 +41,14 @@
 
 \CommitteeChair{Gedare Bloom, Chair, Ph.D.}
 %\CommitteeChair{Gedare Bloom, Chair, Ph.D.}
-\CommitteeMembers{Wayne Patterson, Ph.D.}
-                 {Legand Burge, Ph.D.}
+\CommitteeMembers{Legand Burge, Ph.D.}
+                 {Wayne Patterson, Ph.D.}
                  
 %Uncomment if you have a fourth member on your committee
 \AdditionalMember{Robert Rwebangira, Ph.D.}
 				
 
-\GradSchoolDean{Messac Arenaz, Ph.D.}
+\GradSchoolDean{Achille  Messac, Ph.D.}
 
 %Produce the signature page
 \makesigpage
@@ -112,11 +112,11 @@ Ebelechukwu Nwafor\\[0.2in]
 %\bibliographystyle{plain}     
  \bibliographystyle{alpha}
 \addcontentsline{toc}{chapter}{\bibname}
-\bibliography{refs}         
+%\bibliography{refs}         
 
 % If using the ``thereference'' environment instead, modify the ref.tex file
 % and use the following line
-\include{ref}
+%\include{ref}
 
 % If including appendices, uncomment the following lines,
 % adding more includes if needed.
