--- a/thesis.tex
+++ b/thesis.tex
@@ -39,7 +39,7 @@
 \date{FEB 2016}
 \DeptName{Department of Computer Science}
 
-\CommitteeChair{Gedare Bloom, Chair, Ph.D.}
+\CommitteeChair{Gedare Bloom, Ph.D.(Chair)}
 %\CommitteeChair{Gedare Bloom, Chair, Ph.D.}
 \CommitteeMembers{Legand Burge, Ph.D.}
                  {Wayne Patterson, Ph.D.}
