--- a/chapter1.tex
+++ b/chapter1.tex
@@ -39,7 +39,7 @@ transactions performed on devices connected in an IoT network and also investiga
 
 \section{Provenance-Aware IoT Device Use Case}
 
-Consider a smart home which contains interconnected devices such as a thermostat connected to the internet. This device automatically detects and sets the temperature of a room based on previous information of your desired temperature settings, a smart lock system that can be controlled remotely, a home security camera motoring system, A smart fridge which sends a reminder when food produce are low. A malicous intruder tries to gain access to the smart lock system and security camea remotely. Provenance can be used to track the series  of events to determine where and how a malicious attack originated.It can also be used as a safeguard to alert of a possible remote or insider compromise thereby protecting us from future or current malicious attacks.
+Consider a smart home which contains interconnected devices such as a thermostat connected to the internet. This device automatically detects and regulates the temperature of a room based on prior information of a user's temperature settings, a smart lock system that can be controlled remotely and informs a user via text when has been a breach, a home security camera motoring system, A smart fridge which sends a reminder when food produce are low. A malicous intruder tries to gain access to the smart lock system and security camea remotely. Provenance can be used to track the series  of events to determine where and how a malicious attack originated.It can also be used as a safeguard to alert of a possible remote or insider compromise thereby protecting us from future or current malicious attacks.
 
 \begin{figure}[h]
 \begin{center}
