--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,8 +1,8 @@
 % chap3.tex (Definitions and Theorem)
 
-\chapter{Proposed Model}
+\chapter{Sensor Data Provenance Collection Framework for the Internet of Things}
 
-In this chapter we define all of the components of our proposed model. From the provenance-aware system which deals with the collection, storage and querying of provenance data to the  Intrusion Detection System which deals with detecting malicious attacks on IoT Devices.
+In this chapter we define all of the components and constructs of our proposed model for provenance collection in IoT devices. We outline the components for collection, storage and querying of provenance data.
 
 \section{Provenance\-Collection Model}
 
