--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,12 +1,8 @@
 % chap4.tex (Definitions and Theorem)
 
-\chapter{Solving Most Narrow-Interval Linear Systems Is Easy: Known
-Result} \label{MostNarrowEasy}
+\chapter{Storage Optimization Framework for Provenance data storage in IoT devices} \label{MostNarrowEasy}
 
-In this chapter we will define what we mean by {\em narrow intervals\/} and
-present a positive result concerning systems of interval linear equations
-having such narrow intervals.  This result was first discovered by Lakeyev
-and Kreinovich in the mid 1990's.
+In this chapter we define our model and algorithms for storage optimization of provenance data in IoT devices. We focus on all of the proposed techniqes such as data pruning and data compresion of graphs.  We evaluate our hypothesis the proof of concept ideology.
 
 \section{Definitions}
 
