--- a/chapter6.tex
+++ b/chapter6.tex
@@ -9,13 +9,8 @@ In this research, we present a provenance aware system that collects provenance 
 endeavor.
 
 \section{Future Work}
+\begin{itemize}
 
-The problem now shifts to identifying new subclasses of the class of all
-narrow-interval linear equation systems for which the problem of solving them
-is possible with the development of new algorithms.  Also, if the general
-problem (or any problem in the class NP) shows up often enough in industry,
-science, research, etc., work on improving existing and/or creating new
-approximation methods (including heuristic and/or statistical methods, where
-applicable) is certainly warranted.  Since we cannot compute the exact bounds
-for the general case, good approximation methodologies are the most we can
-hope for or expect.
+\item Provenance collection raises privacy issues.How do we ensure that the vast amount of data collected is not invasive to the privacy of the use and also is not used as a tool to perform malicious attacks.
+
+\end{itemize}
