--- a/thesis.tex
+++ b/thesis.tex
@@ -6,6 +6,7 @@
 \usepackage{graphics}
 \usepackage {tikz}
 \usetikzlibrary {positioning}
+\usepackage{titlesec}
 
 \begin{document}
 
@@ -25,7 +26,7 @@
 % the title contains more than one line, the lines should be
 % of decreasing length, giving the look of an inverted pyramid.
 
-\title{SECURE DATA PROVENANCE FOR IOT DEVICES}
+\title{SECURE DATA PROVENANCE FOR INTERNET OF THINGS(IOT) DEVICES}
 % If the title is more than one line, separate the lines with \\[1pc]
 % as shown below:
 %\title{THIS IS THE VERY FIRST LINE\\[1pc]
@@ -43,6 +44,7 @@
 %\CommitteeChair{Gedare Bloom, Chair, Ph.D.}
 \CommitteeMembers{Legand Burge, Ph.D.}
                  {Wayne Patterson, Ph.D.}
+               
                  
 %Uncomment if you have a fourth member on your committee
 \AdditionalMember{Robert Rwebangira, Ph.D.}
@@ -95,7 +97,7 @@ Ebelechukwu Nwafor\\[0.2in]
 \include{chapter1}         % Introductory Chapter
 \include{chapter2}         % Chapter 2
 \include{chapter3}         % Chapter 3
-%\include{chapter4}         % Chapter 4
+\include{chapter4}         % Chapter 4
 %\include{chapter5}         % Chapter 5
 \include{chapter6}         % Chapter 6
 %\include{chapter7}         % Chapter 7, chap7.tex contains an
